syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

option java_multiple_files = true;
option java_package = "io.openk9.datasource.grpc";
option java_outer_classname = "DatasourceProto";

package datasource;

service DatasourceService {
  rpc addDatasource(DatasourceRequest) returns (Datasource) {}
  rpc getDatasource(common.Id) returns (Datasource) {}
  rpc deleteDatasource(common.Id) returns (Datasource) {}
  rpc patchDatasource(DatasourceRequestId) returns (Datasource) {}
  rpc updateDatasource(DatasourceRequestId) returns (Datasource) {}
  rpc getDatasources(common.Pageable) returns (DatasourceList) {}
}

message DatasourceRequestId {
  int64 id = 1;
  DatasourceRequest request = 2;
}

message DatasourceRequest {
  string name = 1;
  string description = 2;
  string scheduling = 3;
  google.protobuf.Timestamp lastIngestionDate = 4;
  bool schedulable = 5;
}

message DatasourceList {
  repeated Datasource response = 1;
}

message Datasource {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp createDate = 4;
  google.protobuf.Timestamp modifiedDate = 5;
  string scheduling = 6;
  google.protobuf.Timestamp lastIngestionDate = 7;
  bool schedulable = 8;
}
